Cleaup AddJob on destruction

In a recent patch m_addJob was cleaned up correctly. The code throughout
already checked pointer validity, but at no point was this reset.

This meant a queued task would then hit a dangling pointer.

BUG: 442774